[tool.poetry]
name = "data-visulization"
version = "0.1.0"
description = ""
authors = ["Osama-Yousef <osamawalidyousef@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
jupyterlab = "^2.2.6"
seaborn = "^0.10.1"
matplotlib = "^3.3.1"
pandas = "^1.1.1"
numpy = "^1.19.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
